<?xml version="1.0" encoding="utf-8"?>
<!--<androidx.constraintlayout.widget.ConstraintLayout -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:background="@drawable/pizza_background"
    tools:context="com.zybooks.pizzaparty.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_of_people"
        android:textSize="24sp"
        android:labelFor="@id/num_attend_edit_text" />

    <EditText
        android:id="@+id/num_attend_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="5"
        android:importantForAutofill="no"
        android:hint="@string/_10" />
<!--        app:layout_constraintBaseline_toBaselineOf="@id/num_attend_edit_text" />-->


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/how_hungry"
        android:textSize="24sp"
        android:labelFor="@id/hungry_radio_group" />

    <RadioGroup
        android:id="@+id/hungry_radio_group"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/light_radio_button"
            android:text="@string/light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <RadioButton
            android:id="@+id/medium_radio_button"
            android:text="@string/medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true" />
        <RadioButton
            android:id="@+id/ravenous_radio_button"
            android:text="@string/ravenous"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RadioGroup>

<!--    <Spinner-->
<!--        android:id="@+id/spinner_hunger_level"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content" />-->

    <TextView
        android:id="@+id/num_pizzas_text_view"
        android:text="@string/total_pizzas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="@dimen/label_text_size"/>

    <Button
        android:id="@+id/calc_button"
        android:text="@string/calculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        style="@style/CalcButton"
        android:onClick="calculateClick" />
</LinearLayout>
